--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.2",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -54,6 +55,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
+    "@types/uuid": "^9.0.2",
     "cypress": "^12.14.0",
     "eslint-plugin-cypress": "^2.13.3",
     "fetch-mock": "^9.11.0",
